# dinaya

./: .env.example  .gitignore  .mergify.yml  AGENTS.md  README.md  components.json  dinaya-30s-vo-script.md  dinaya-linkedin-banner.html  drizzle.config.ts  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
.claude/: launch.json
apple-ultra-skills/: README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  main.rs  tray.rs
docs/: ai-voice-receptionist-setup.md  android-mobile-app.md  booking-hub-redesign.md  booking-ui-master-plan.md  booking-ui-v2-plan.md  deployment-checklist.md  docs-demos-design.md  improvement-suggestions.md  mcp-dinaya.md  whatsapp-template-setup.md
drizzle/: 0000_initial_schema.sql  0001_clients_crm.sql  0002_s1_foundations.sql  0003_platform_stabilization.sql  0004_sri_lanka_growth.sql  0005_pro_subscriptions.sql  0006_max_plan.sql  0007_billing_interval.sql  0008_locations.sql  0009_ai_growth_workflows.sql  0009_fix_locations.sql  0010_business_moderation.sql  0011_booking_notifications.sql  0012_growth_features.sql  0012_pro_growth.sql  0012_pro_growth_features.sql  0013_platform_settings.sql  0014_phase5_growth.sql  0015_security_performance_indexes.sql  0016_platform_events.sql  0016_voice_receptionist.sql  0017_onboarding.sql  0018_directory_backfill.sql  (+23 more)
(+1291 files in other folders)
